--- a/aaas-app-mongo/src/main/resources/templates/home.html
+++ b/aaas-app-mongo/src/main/resources/templates/home.html
@@ -33,16 +33,16 @@
 		<br />
 		<h2>Add Car</h2>
 		<form action="/addCar" method="POST">
-			Make <input type="text" id="make" name="make" /><br />
-			Model <input type="text" id="model" name="model" /><br />
-			Year <input type="text" id="year" name="year" /><br />
+			Make <input name="text" id="make" name="make" /><br />
+			Model <input name="text" id="model" name="model" /><br />
+			Year <input name="text" id="year" name="year" /><br />
 			Description <textarea rows="5" cols="70" id="description" name="description" /><br />
-			<input type="submit" />
+			<input name="submit" />
 		</form>
 		<h2>Search for cars</h2>
 		<form action="/search" method="POST">
-			<input type="text" name="search" id="search" th:value="${search}" />
-			<input type="submit" value="Search" />
+			<input name="text" name="search" id="search" th:value="${search}" />
+			<input name="submit" value="Search" />
 		</form>
 	</body>
 </html>
