--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/templates/upload.html
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/templates/upload.html
@@ -19,10 +19,14 @@
 
 <form method="POST" action="/upload" enctype="multipart/form-data">
     <input type="file" name="file" /><br/><br/>
-    <input type="submit" value="Submit" />
+    <input type="submit" value="submit" />
+    <div style="margin-top:5px" ng-controller="getcontroller">
+        <button ng-click="syncChoice()" type="button" class="btn btn-default"
+                style="margin:10px 0px 10px 0px;">同步choice和dataManager等模块信息
+        </button>
+    </div>
 </form>
-
-        </div>
+    </div>
 
 
     <h3 style="color:blue">基金同步异常状态查看</h3>
