--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/templates/upload.html
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/templates/upload.html
@@ -18,7 +18,7 @@
 
 
 <form method="POST" action="/upload" enctype="multipart/form-data">
-    <input type="file" name="file" /><br/><br/>
+    <input type="file" name="file" /><br/>
     <input type="submit" value="submit" />
     <div style="margin-top:5px" ng-controller="getcontroller">
         <button ng-click="syncChoice()" type="button" class="btn btn-default"
